<resources>
    <string name="app_name">AndroidMonitor</string>
    <string name="title_setting">设置</string>
    <string name="title_monitor">监控</string>
    <string name="title_history">历史记录</string>
    <string name="setting_notifcation">报警设置</string>
    <string name="setting_record">录像设置</string>
    <string name="setting_other">其他设置</string>
    <string name="action_settings">Settings</string>
    <string name="pref_title_alert_phone_hint">输入报警短信</string>
    <string name="pref_title_alert_email_hint">输入报警邮箱</string>
    <string name="pref_title_record_time">录像时长</string>
    <string name="pref_title_storage">存储位置</string>
    <string name="pref_title_storage_hint">/sdcard/monitor/</string>
    <string name="pref_title_storage_name">监控位置</string>
    <string name="pref_title_storage_name_hint">请输入监控位置名称</string>
    <string name="pref_title_abount">关于本软件</string>

    <string name="monitor_start">开始监控</string>
    <string name="record_progress">录像中</string>
    <string name="monitor_progress">监控中</string>
    <string name="camera_error">Camera 出现错误</string>
    <string name="email_title">监控软件提醒</string>
    <string name="email_message">软件监控中发现人脸图片，具体请看附件照片。</string>
    <string name="sms_message">监控软件中发现人脸信息</string>
    <string-array name="record_title">
        <item>10秒</item>
        <item>30秒</item>
        <item>1分钟</item>
        <item>5分钟</item>
        <item>10分钟</item>
        <item>20分钟</item>
        <item>30分钟</item>
        <item>1小时</item>
    </string-array>

    <string-array name="record_value">
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>300</item>
        <item>600</item>
        <item>1200</item>
        <item>1800</item>
        <item>3600</item>
    </string-array>

    <string name="title_activity_show_history">ShowHistoryActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
